@@ -4245,6 +4245,8 @@ v0.33.19        26-Oct-2001
 		now in a more logical order for a first system setup.
 		Most datafiles are now saved mode 0640 exept the files that
 		need to be rewritten by users, they have mode 0660.
+		In the file database editor the default choice was 0 in stead
+		of -.
 
 	mbsebbs:
 		Added menu 317, change FS editor shortcut keys to (Emacs/
@@ -4312,4 +4314,5 @@ v0.33.19        26-Oct-2001
 
 	mbfile:
 		During check the file databases are reset to filemode 0660.
+		Implemented "mbfile adopt" function.
 
